--- a/BulgariaGuessr/index.html
+++ b/BulgariaGuessr/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
     <title>Bulgaria Guesser</title>
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=geometry"></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div id="street-map"></div>
         <div id="wrapper-guessmap">
             <div id="guessing-map"></div>
-            <a id="make-guess-btn" href="javascript:void(0)">Make guess</a>
+            <a id="make-guess-btn" href="javascript:void(0)">Make a guess</a>
         </div>
     </div>
 
